write functonality to update colors on small palettes correctly

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,7 +95,7 @@ h6 {
   background-color: magenta;
 }
 
-.mini-1,
+/* .mini-1, */
 .color1 {
   background-color: #25b0e4;
 }
